*** October 26th, 2008 - RosBE 1.3 Released

- Added: Tool to set the Architecture to build ROS for. (Daniel Reimer)
- Updated: NASM to 2.03 (Daniel Reimer)
- Updated: NSIS to 2.40 (Daniel Reimer)
- Updated: Subversion to 1.5.3 (Daniel Reimer)
- Updated: GDB to 6.8-3 (Daniel Reimer)
- Updated: MingW32 Make 3.81-3 (Daniel Reimer)
- Updated: MingW32 Runtime DLL 3.15.1 (Daniel Reimer)
- Other small Fixes here and there (Daniel Reimer)
- Added: Basic PowerShell Version of RosBE (Daniel Reimer)
- Added: YASM 0.72, which supports 64 bit asm too. (Daniel Reimer)
- Added: Update command (Daniel Reimer)
- Added: nostrip function (Christoph von Wittich)
- Added: RosBE Debugging Feature which disables the @echo off. just set 
         _ROSBE_DEBUG=1 (Daniel Reimer)
- Added: Mingw-64 GCC 4.4.0 for the 64 bit Branch. It will be installed with a
         Optional installer (Daniel Reimer)
- Fixed: Fixed the Header Mess in the different GCC Versions. Now the need for 
         LIBRARY_PATH is no more and all Arches use THEIR Headers. (Samuel Serapion)
- Fixed: Dependant on the Arch variable a crosscompiler will be used now. (Daniel Reimer)
- Fixed: Clean only cleans the arch which is active right now. (Daniel Reimer)
- Fixed: "if defined xxx" with a nested "if %xxx% == foobar" does not work in batch.
         (Daniel Reimer)
- Fixed: Bug 3043: Polish translation update (olaf_siejka@o2.pl)
- Fixed: Bug 3044: Ukrainian translation update (temarez@yandex.ru)
- Fixed: Bug 3035: Patch for RosBE that solves improper handling of a path with
         spaces (roelmessiant@gmail.com)
- Fixed: Stripped apps and removed Debug Symbols at once may not be possible.
         (Daniel Reimer)
- Fixed: Warnings, Resource Leaks, Problems with non-allocated Memory, RC MSVC
         Comptibility (Christoph von Wittich)
- Fixed: First look into %_ROSBE_BASEDIR% for the specified directory and use it if it
         exists. his makes it possible to just call "chdefgcc 3.4.5" instead of