@@ -236,9 +236,9 @@ if (Test-Path "$_ROSBE_BASEDIR\update.ps1") {
         " Usage: update [OPTIONS]"
         " Updates all files of RosBE to the most recent files."
         ""
-        "    nocmds  - Skips the Updating of the Script Files."
-        "    nogcc   - Skips the Updating of GCC."
-        "    notools - Skips the Updating of the Tools."
+        "    reset  - Removes the Updates Cache. Not recommended."
+        "    nr X   - Re/Installs Update Nr X."
+        "    status - Shows the recent status of available, non installed updates."
         exit
     }
 }
